--- a/src/app/modules/guide/components/blog/blog.component.html
+++ b/src/app/modules/guide/components/blog/blog.component.html
@@ -3,7 +3,8 @@
 <div class="md-form md-outline">
   <textarea type="text" id="form75" class="form-control md-textarea" rows="3" mdbInput></textarea>
   <label for="form75">Post some Blog</label>
-  <button mdbBtn type="button" size="md" color="pink" mdbWavesEffect style="float: right;">Send &nbsp;<i class="far fa-paper-plane"></i></button>
+  <button mdbBtn type="button" size="md" mdbWavesEffect style="float: right; background-color: #553d67; color:white">
+    Send &nbsp;<i class="far fa-paper-plane"></i></button>
 </div>
   </div>
 </div>
