--- a/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
+++ b/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
@@ -128,8 +128,8 @@
     </div>
     <div class="row card-body mx-0 px-0">
         <div class="col-md-12 text-center">
-            <button class="btn bgrey white-text" style="width: 120px;" mdbBtn type="button" previousStep>Previous</button>
-            <button class="btn dpurple white-text" nextStep style="width: 120px;" mdbBtn type="button" (click)="finalSubmit()">Next</button>
+            <button class="btn bgrey white-text" style="width: 125px;" mdbBtn type="button" previousStep>Previous</button>
+            <button class="btn dpurple white-text" style="width: 120px;" mdbBtn type="button" (click)="finalSubmit()">Next</button>
         </div>
     </div>
 </div>
