--- a/src/app/modules/guide/components/personal-details/personal-details.component.html
+++ b/src/app/modules/guide/components/personal-details/personal-details.component.html
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                         <div class="col-md-12 mt-4 text-center">
-                            <button class="btn dpurple white-text" mdbBtn nextStep style="width: 150px;" (click)="submitPersonalDetails()" type="button">Next
+                            <button class="btn dpurple white-text" mdbBtn style="width: 150px;" (click)="submitPersonalDetails()" type="button">Next
                             </button>
                         </div>
                     </div>
