--- a/src/app/modules/guide/components/requests/requests.component.html
+++ b/src/app/modules/guide/components/requests/requests.component.html
@@ -30,7 +30,9 @@
                                     <td>{{data.startDate | date: 'dd-MM-yyyy'}}</td>
                                     <td>{{data.duration}} days</td>
                                     <td>
-                                        <button class="btn" color="info" style="margin: auto;" (click)="open(content, data)" mdbBtn type="button" size="sm" mdbWavesEffect>
+                                        <button class="btn text-white dpurple" style="margin: auto;"
+                                         (click)="open(content, data)" mdbBtn type="button" size="sm"
+                                          mdbWavesEffect>
                                             <b>VIEW</b>
                                         </button>
                                     </td>
@@ -75,7 +77,8 @@
                         </div>
                     </div>
                 </mdb-card-text>
-                <a size="sm" class="float-right" (click)="open(content, data)" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
+                <a size="sm" class="float-right text-white dpurple" (click)="open(content, data)"
+                 mdbBtn  mdbWavesEffect>VIEW</a>
             </mdb-card-body>
         </mdb-card>
     </div>
@@ -150,13 +153,21 @@
     </div>
     <div class="modal-footer row mx-0 ">
         <div class="col">
-            <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block px-1" (click)="d('Cross click')" mdbWavesEffect>Close&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
+            <button type="button" mdbBtn 
+             size="sm" class="waves-light btn-block px-1 text-white bgrey" (click)="d('Cross click')"
+              mdbWavesEffect>Close</button>
         </div>
         <div class="col">
-            <button type="button" mdbBtn color="green" (click)="acceptRequest(content, selectedRequest._id)" size="sm" class="btn-block waves-light px-1" mdbWavesEffect>Accept&nbsp;<mdb-icon fas icon="map-marked-alt"></mdb-icon></button>
+            <button type="button" mdbBtn 
+            (click)="acceptRequest(content, selectedRequest._id)" size="sm"
+             class="btn-block waves-light text-white dpurple px-1" mdbWavesEffect>Accept
+             </button>
         </div>
         <div class="col">
-            <button type="button" mdbBtn color="danger" (click)="rejectRequest(content, selectedRequest._id)" size="sm" class="btn-block waves-light px-1" mdbWavesEffect>Reject&nbsp;<mdb-icon far icon="trash-alt"></mdb-icon></button>
+            <button type="button" mdbBtn 
+            (click)="rejectRequest(content, selectedRequest._id)"
+             size="sm" class="btn-block dblue text-white waves-light px-1" mdbWavesEffect>
+             Reject</button>
         </div>
     </div>
 </ng-template>
