--- a/src/app/modules/guide/pages/interests/interests.component.html
+++ b/src/app/modules/guide/pages/interests/interests.component.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <h4>All
-            <button class="btn dpurple white-text my-0 py-2 float-right" nextStep mdbBtn type="button" (click)="outputInterests()">Next</button>
+            <button class="btn dpurple white-text my-0 py-2 float-right" mdbBtn type="button" (click)="outputInterests()">Next</button>
             <button class="btn bgrey white-text my-0 py-2 float-right" mdbBtn type="button" previousStep>Previous</button>
         </h4>
         <hr>
