--- a/src/app/shared/components/deal-modal/deal-modal.component.scss
+++ b/src/app/shared/components/deal-modal/deal-modal.component.scss
@@ -6,3 +6,12 @@ table.table th, table.table td {
     padding-top: 0.5rem;
       padding-bottom: 0.5rem;
   }
+  .dpurple {
+    background-color: #553d67;
+    color: white;
+}
+
+.bgrey {
+    background-color: #757575;
+    color: white;
+}
