--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -79,3 +79,12 @@ a:hover {
 .dropdown-menu {
     z-index: 2000;
 }
+.dpurple {
+    background-color: #553d67;
+    color: white;
+}
+
+.bgrey {
+    background-color: #757575;
+    color: white;
+}
