--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -30,7 +30,8 @@
                                     <td>{{data.startDate | date: 'dd-MM-yyyy'}}</td>
                                     <td>{{data.duration}} days</td>
                                     <td>
-                                        <button class="btn" color="info" style="margin: auto;" (click)="open(content, data)" mdbBtn type="button" size="sm" mdbWavesEffect>
+                                        <button class="btn" style="margin: auto; background-color: #553d67; color:white"
+                                         (click)="open(content, data)" mdbBtn type="button" size="sm" mdbWavesEffect>
                                             <b>VIEW</b>
                                         </button>
                                     </td>
@@ -72,7 +73,7 @@
                         </div>
                     </div>
                 </mdb-card-text>
-                <a size="sm" class="float-right" (click)="open(content, data)" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
+                <a size="sm" class="float-right" (click)="open(content, data)" mdbBtn style="background: #553d67;" mdbWavesEffect>VIEW</a>
             </mdb-card-body>
         </mdb-card>
     </div>
@@ -189,14 +190,21 @@
     </div>
     <div class="modal-footer row mx-0">
         <div class="col">
-            <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block" (click)="d('Cross click')" mdbWavesEffect>Close&nbsp;
-          <mdb-icon fas icon="ban"></mdb-icon></button>
+            <button type="button" mdbBtn size="sm" class="text-white bgrey waves-light btn-block" (click)="d('Cross click')"
+             mdbWavesEffect>Close
+          </button>
         </div>
         <div class="col">
-            <button *ngIf="selectedBooking.tourType !== 'deal'" type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light" (click)="contactTourist(content, selectedBooking.touristId[0]?.email, selectedBooking.touristId[0].name)" mdbWavesEffect>Contact&nbsp;
-        <mdb-icon fas icon="headset"></mdb-icon></button>
-            <button *ngIf="selectedBooking.tourType === 'deal'" type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light" (click)="contactTouristRoom(content, selectedBooking.roomDetails?._id)" mdbWavesEffect>Contact&nbsp;
-        <mdb-icon fas icon="headset"></mdb-icon></button>
+            <button *ngIf="selectedBooking.tourType !== 'deal'" type="button" 
+            mdbBtn size="sm" class="btn-block dpurple text-white waves-light"
+             (click)="contactTourist(content, selectedBooking.touristId[0]?.email, selectedBooking.touristId[0].name)"
+              mdbWavesEffect>Contact
+            </button>
+            <button *ngIf="selectedBooking.tourType === 'deal'" type="button"
+             mdbBtn size="sm" class="text-white dpurple btn-block waves-light" 
+             (click)="contactTouristRoom(content, selectedBooking.roomDetails?._id)"
+              mdbWavesEffect>Contact
+            </button>
         </div>
     </div>
 </ng-template>
