--- a/src/app/modules/home/top-deals/top-deals.component.scss
+++ b/src/app/modules/home/top-deals/top-deals.component.scss
@@ -1,6 +1,6 @@
 // @media(max-width: 992px) {
     .dealImg {
-        height: 250px;
+        // height: 250px;
         width: 100%;
     }
 // }
@@ -12,7 +12,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    background-image: url(https://images.unsplash.com/photo-1576948676159-ad6604dc1fd0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80);
+    background-image: url(https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/photo-1576948676159-ad6604dc1fd0.jpeg);
     min-height: 140px;
 }
 
