--- a/src/app/modules/tourists/components/guides-list/guides-list.component.html
+++ b/src/app/modules/tourists/components/guides-list/guides-list.component.html
@@ -36,7 +36,8 @@
                             </div>
                         </div>
                         <div class="text-center mb-2 mt-2">
-                            <button (click)="openModal(personalTour, guide)" type="button" size="sm" class="btn btn-cyan">Request for Personalised Tour</button>
+                            <button (click)="openModal(personalTour, guide)" style="background-color: #22c1c3; color: white"
+                            type="button" size="sm" class="btn">Request for Personalised Tour</button>
                         </div>
                         <div class=" mt-1 mb-0">
                             <i class="fa fa-star" *ngFor="let star of getRating(guide)" aria-hidden="true"></i>
@@ -151,27 +152,27 @@
 
 <div *ngIf="!searchService.guidesList"  class="row">
     <div class="col text-center">
-        <h1>No Guides Availabel here!</h1>
+        <h1>No Guides Available here!</h1>
     </div>
 </div>
 
 
-<div *ngIf="searchService.guidesList"  class="row m-3">
-    <div class="col-12 col-sm-6 col-md-6  d-block d-lg-none mb-4" *ngFor="let guide of searchService.guidesList">
+<div *ngIf="searchService.guidesList"  class="row m-3 d-block d-lg-none">
+    <div class="col-12 col-sm-6 col-md-6  mb-4" *ngFor="let guide of searchService.guidesList">
         <div class="view guide-card" style="position: relative;">
             <img [src]="guide.picUrl ? guide.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" 
             width="100%" height="100%" alt="">
             <div class="mask mygradient white-text">
                 <div class="float-right mx-2 mt-1"> <i class="fa fa-star star" aria-hidden="true"></i>
-                    <i class="fa fa-star star" *ngFor="let star of getRating(guide)" aria-hidden="true"></i>
-                    <div style="font-size:12px;">({{guide.reviewAndRating.length}}+ REVIEWS)</div>
+                    <i class="fa fa-star star" class="color: black" *ngFor="let star of getRating(guide)" aria-hidden="true"></i>
+                    <div style="font-size:12px; color: black">({{guide?.reviewAndRating.length}}+ REVIEWS)</div>
                 </div>
                 <div style="position:absolute; bottom:6px; left:10px; overflow-wrap: break-word;">
                     <h4 [routerLink]="['/tourists/touristshome/guideProfile', guide._id]" 
-                    class="guide-name">{{guide.gender}} {{guide.name | titlecase}}</h4>
+                    class="guide-name">{{guide?.gender}} {{guide?.name | titlecase}}</h4>
                 </div>
-                <div style="position:absolute; bottom:6px; right:10px;" class="float-right">
-                    <div class="text-center">₹{{guide.perHeadCharge}}/head/day</div>
+                <div style="position:absolute; bottom:30px; right:6px;" class="float-right">
+                    <div class="text-center">₹{{guide?.perHeadCharge}}/head/day</div>
                     <button type="button" (click)="openModal(personalTour, guide)" style=" border: 1px solid black; font-size: 15px;" class="white black-text my-2" mdbWavesEffect>BOOK NOW!</button>
                 </div>
             </div>
