--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -139,7 +139,7 @@
             <li class="nav-item avatar dropdown" dropdown >
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
                     <!-- More<span class="caret"></span> -->
-                    <img [src]="user.picUrl ? user.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" alt="" class="img-fluid rounded-circle z-depth-0" style="height:32px; width:32px;">
+                    <img [src]="user?.picUrl ? user?.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" alt="" class="img-fluid rounded-circle z-depth-0" style="height:32px; width:32px;">
                 </a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a (click)="onLinkClick()" class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/guide/guidehome/editProfile']" routerLinkActive="active">Edit Profile</a>
@@ -166,7 +166,7 @@
             </li>
             <li class="nav-item avatar dropdown" dropdown >
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-                    <img [src]="user.picUrl ? user.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" alt="" class="img-fluid rounded-circle z-depth-0" style="height:32px; width:32px;">
+                    <img [src]="user?.picUrl ? user?.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" alt="" class="img-fluid rounded-circle z-depth-0" style="height:32px; width:32px;">
                 </a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a (click)="onLinkClick()" class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/guide/guidehome']" routerLinkActive="active">Dashboard</a>
@@ -346,7 +346,7 @@
             <li class="nav-item avatar dropdown" dropdown >
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
                     <!-- More<span class="caret"></span> -->
-                    <img [src]="user.picUrl ? user.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" alt="" class="img-fluid rounded-circle z-depth-0" style="height:32px; width:32px;">
+                    <img [src]="user?.picUrl ? user?.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" alt="" class="img-fluid rounded-circle z-depth-0" style="height:32px; width:32px;">
                 </a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a (click)="onLinkClick()" class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/guide/guidehome/editProfile']" routerLinkActive="active">Edit Profile</a>
@@ -373,7 +373,7 @@
             </li>
             <li class="nav-item avatar dropdown" dropdown >
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-                    <img [src]="user.picUrl ? user.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" alt="" class="img-fluid rounded-circle z-depth-0" style="height:32px; width:32px;">
+                    <img [src]="user?.picUrl ? user?.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" alt="" class="img-fluid rounded-circle z-depth-0" style="height:32px; width:32px;">
                 </a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a (click)="onLinkClick()" class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/guide/guidehome']" routerLinkActive="active">Dashboard</a>
@@ -421,15 +421,18 @@
         <h6 class="modal-title w-100" id="myModalLabel">On Going Events</h6>
       </div>
       <div *ngIf="onGoingEvents" class="modal-body">
+        <h5>{{onGoingEvents[0]?.guideId?.city}}, {{onGoingEvents[0]?.guideId?.state}}</h5>
+        <!-- <p>With {{onGoingEvents[0]?.guideId?.gender}} {{onGoingEvents[0]?.guideId?.name | titlecase}}</p> -->
         <div class="row">
           <div class="col">
-            <b>{{onGoingEvents[0]?.startDate | date: 'yyyy/dd/MM'}}</b> -
-            <b>{{onGoingEvents[0]?.endDate  | date: 'yyyy/dd/MM'}}</b>
+
+            <b>From - {{onGoingEvents[0]?.startDate | date: 'yyyy/dd/MM'}}</b><br>
+            <b>To - {{onGoingEvents[0]?.endDate  | date: 'yyyy/dd/MM'}}</b>
           </div>
         </div>
         <div class="row">
           <div class="col">
-            <p>{{onGoingEvents[0]?.tourType | titlecase}}</p>
+            <p class="mb-0 mt-3">Tour type - {{onGoingEvents[0]?.tourType | titlecase}}</p>
           </div>
         </div>
       </div>
@@ -440,19 +443,19 @@
         <!-- [routerLink]="['/tourists/touristshome/bookings/now']" -->
         <button type="button" *ngIf="userService.getRole() === 'tourist'"
          mdbBtn size="sm"
-         color="secondary" class="waves-light" aria-label="Close" (click)="openModal(content)" mdbWavesEffect>
+         class="waves-light bgrey" aria-label="Close" (click)="openModal(content)" mdbWavesEffect>
          View
         </button>
         <!-- [routerLink]="['/guide/guidehome/bookings']" -->
         <button type="button" *ngIf="userService.getRole() === 'guide'"
           mdbBtn size="sm"
-         color="secondary" class="waves-light" aria-label="Close" (click)="openModal(content)" mdbWavesEffect>
+         class="waves-light bgrey" aria-label="Close" (click)="openModal(content)" mdbWavesEffect>
          View
         </button>
 
         <button type="button" (click)="open(rating)" *ngIf="userService.getRole() === 'tourist'"
            routerLinkActive="router-link-active"
-          mdbBtn size="sm" color="primary" class="relative waves-light" [disabled]="getEndDate(onGoingEvents[0])" mdbWavesEffect>
+          mdbBtn size="sm" class="relative dpurple waves-light" [disabled]="getEndDate(onGoingEvents[0])" mdbWavesEffect>
           Completed
         </button>
       </div>
@@ -478,6 +481,14 @@
         </div>
       </div>
       <hr class="mt-0">
+      <div *ngIf="userService.getRole() === 'tourist'" class="row">
+        <div class="col-6">
+          <B>Guide Name</B>
+        </div>
+        <div class="col-6">
+            {{onGoingEvents[0]?.guideId?.gender}}  {{onGoingEvents[0]?.guideId?.name | titlecase}}
+        </div>
+      </div>
       <div class="row">
         <div class="col-6">
           <B>Price</B>
@@ -518,42 +529,47 @@
           {{onGoingEvents[0]?.groupType | titlecase}}
         </div>
       </div>
-      <!-- <table class="table">
+      <table *ngIf="onGoingEvents?.tourType === 'deal'" class="table">
+        <thead>
+          <tr>
+            <th><b>Sr no.</b></th>
+            <th><b>Tour Places</b></th>
+            <th><b>Visit Date</b></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of onGoingEvents?.places; let i = index">
+            <td>{{i+1}}</td>
+            <td>{{item.place | titlecase}}</td>
+            <td>{{item.date | date: 'dd-MM-yyyy'}}</td>
+          </tr>
+        </tbody>
+      </table>
+      <table *ngIf="userService.getRole() === 'guide'" class="table">
         <thead>
           <tr>
             <th><b>Sr no.</b></th>
             <th><b>Tourist Name</b></th>
+            <th><b>Nationality</b></th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let item of onGoingEvents[0]?.touristId; let i = index">
             <td>{{i+1}}</td>
             <td>{{item.name | titlecase}}</td>
+            <td>{{item.nationality}}</td>
           </tr>
         </tbody>
-      </table> -->
-      <!-- <table *ngIf="onGoingEvents?.tourType === 'deal'" class="table">
-        <thead>
-          <tr>
-            <th><b>Sr no.</b></th>
-            <th><b>Tour Places</b></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of onGoingEvents?.places; let i = index">
-            <td>{{i+1}}</td>
-            <td>{{item | titlecase}}</td>
-          </tr>
-        </tbody>
-      </table> -->
+      </table> 
   </div>
   <div class="modal-footer row mx-0 ">
        <div class="col">
-         <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block" (click)="d('Cross click')" mdbWavesEffect>Ok&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
+         <button type="button" mdbBtn size="sm" class="waves-light btn-block dblue" (click)="d('Cross click')" mdbWavesEffect>Close</button>
       </div>
       <div class="col">
-        <button type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light"
-          *ngIf="userService.getRole() === 'tourist'" (click)="open(rating)"  [disabled]="getEndDate(onGoingEvents[0])"
+        <button type="button" mdbBtn size="sm" class="btn-block waves-light dpurple"
+          *ngIf="userService.getRole() === 'tourist'"  (click)="open(rating)"  
+          [disabled]="getEndDate(onGoingEvents[0])"
           mdbWavesEffect>
           Completed!&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
       </div>
