--- a/src/app/shared/components/personal-modal/personal-modal.component.scss
+++ b/src/app/shared/components/personal-modal/personal-modal.component.scss
@@ -2,3 +2,12 @@ p {
     text-align: left;
     margin-bottom: 8px;
 }
+.dpurple {
+    background-color: #553d67;
+    color: white;
+}
+
+.bgrey {
+    background-color: #757575;
+    color: white;
+}
