--- a/src/styles.scss
+++ b/src/styles.scss
@@ -313,5 +313,13 @@ button[disabled],
     background-color: #757575;
 }
 
+.aquab {
+    background-color: #22c1c3;
+}
+
+.yellowy {
+    background-color: #faed26;
+}
+
 // ssss
 // Please change your favorite font-size!
