--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -31,7 +31,7 @@
                                         <button class="btn white-text" style="margin: auto; background-color: #553d67;" (click)="open(content, data)" mdbBtn type="button" size="sm" mdbWavesEffect>
                                         <b>VIEW</b>
                                         </button>&nbsp;
-                                        <button class="btn white-text" style="margin: auto;" color="success" [disabled]="disableStart(data)" (click)="startTour(data)" mdbBtn type="button" size="sm" mdbWavesEffect>
+                                        <button class="btn white-text" style=" background-color: #22c1c3;" style="margin: auto;" [disabled]="disableStart(data)" (click)="startTour(data)" mdbBtn type="button" size="sm" mdbWavesEffect>
                                         <b>START</b>
                                     </button>
                                     </td>
@@ -76,8 +76,8 @@
                         </div>
                     </div>
                 </mdb-card-text>
-                <button size="sm" class="float-right white-text" (click)="open(content, data)" mdbBtn style="background: #553d67;" mdbWavesEffect>VIEW</button>
-                <button size="sm" color="success" class="float-right white-text" (click)="startTour(data)" mdbBtn [disabled]="disableStart(data)" mdbWavesEffect>START</button>
+                <button size="sm" class="float-right dpurple white-text" (click)="open(content, data)" mdbBtn mdbWavesEffect>VIEW</button>
+                <button size="sm" class="float-right white-text" style=" background-color: #22c1c3;" (click)="startTour(data)" mdbBtn [disabled]="disableStart(data)" mdbWavesEffect>START</button>
             </mdb-card-body>
         </mdb-card>
     </div>
@@ -176,16 +176,16 @@
     <div class="modal-footer mx-0 ">
         <div class="row w-100">
             <div class="col-4 px-1">
-                <button mdbBtn class="btn-block waves-light px-1" type="button" size="sm" color="danger" (click)="openCancelRequest(cancel)" mdbWavesEffect>Cancel Booking</button>
+                <button mdbBtn class="btn-block waves-light px-1 bgrey white-text" type="button" size="sm" (click)="openCancelRequest(cancel)" mdbWavesEffect>Cancel Booking</button>
             </div>
             <div class="col-4 px-1">
-                <button type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light px-1" *ngIf="selectedBooking.tourType !== 'deal'" (click)="contactGuide(content, selectedBooking?.guideId?.email, selectedBooking?.guideId?.name)" mdbWavesEffect>
-            Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
-                <button type="button" mdbBtn color="deep-orange" *ngIf="selectedBooking.tourType === 'deal'" size="sm" class="btn-block waves-light px-1" (click)="contactTouristRoom(content, selectedBooking.roomDetails._id)" mdbWavesEffect>
-             Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
+                <button type="button" mdbBtn size="sm" class="yellowy btn-block waves-light px-1" *ngIf="selectedBooking.tourType !== 'deal'" (click)="contactGuide(content, selectedBooking?.guideId?.email, selectedBooking?.guideId?.name)" mdbWavesEffect>
+            Contact&nbsp;</button>
+                <button type="button" mdbBtn *ngIf="selectedBooking.tourType === 'deal'" size="sm" class="yellowy btn-block waves-light px-1" (click)="contactTouristRoom(content, selectedBooking.roomDetails._id)" mdbWavesEffect>
+             Contact&nbsp;</button>
             </div>
             <div class="col-4 px-1">
-                <button type="button" color="success" mdbBtn [disabled]="disableStart(selectedBooking)" size="sm" class="waves-light btn-block px-1" mdbWavesEffect>Start Tour&nbsp;</button>
+                <button type="button" mdbBtn [disabled]="disableStart(selectedBooking)" style=" background-color: #22c1c3;" size="sm" class="waves-light btn-block px-1 white-text" mdbWavesEffect>Start Tour&nbsp;</button>
             </div>
         </div>
     </div>
@@ -193,7 +193,7 @@
 
 
 <ng-template #cancel let-c1="close" let-d1="dismiss">
-    <div class="modal-header white-text" style="background-color: #FF3547;">
+    <div class="modal-header">
         <h5 class="modal-title" id="modal-basic-title">Cancel Booking</h5>
         <button type="button" class="close" aria-label="Close" (click)="d1('Cross click')">
       <span aria-hidden="true">&times;</span>
@@ -206,7 +206,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button mdbBtn type="button" color="secondary" size="sm" class="btn" (click)="c1('Save click')">Close&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
-        <button mdbBtn type="button" color="danger" size="sm" class="btn " (click)="cancelBooking(content, cancel)">Cancel</button>
+        <button mdbBtn type="button" size="sm" class="btn white-text bgrey" (click)="c1('Save click')">Close&nbsp;</button>
+        <button mdbBtn type="button" size="sm" class="btn white-text dpurple" (click)="cancelBooking(content, cancel)">Cancel</button>
     </div>
 </ng-template>
