--- a/src/app/shared/components/change-password/change-password.component.scss
+++ b/src/app/shared/components/change-password/change-password.component.scss
@@ -5,167 +5,198 @@
 //     align-items: center;
 //     width: 100%;
 // }
+
 /* Reset Css */
-.card1{
-  background:transparent;
-}
- div, form, input, label, ul, li, h1, h2, p{
-  margin: 0;
-  padding: 0;
-	box-sizing: border-box; }
 
-ul, li{
-	list-style: none;
+.card1 {
+    background: transparent;
 }
 
-img{
-	border: 0;
+div,
+form,
+input,
+label,
+ul,
+li,
+h1,
+h2,
+p {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+ul,
+li {
+    list-style: none;
+}
+
+img {
+    border: 0;
+}
+
 
 /* css */
-html, body{
-	font-family: 'Open Sans', sans-serif;
-	height: 100%;
-  background-image: radial-gradient(circle at top right, rgb(49, 157, 235) 0%, rgb(49, 157, 235) 13%,rgb(76, 166, 234) 13%, rgb(76, 166, 234) 23%,rgb(103, 176, 232) 23%, rgb(103, 176, 232) 33%,rgb(130, 185, 231) 33%, rgb(130, 185, 231) 46%,rgb(156, 194, 230) 46%, rgb(156, 194, 230) 48%,rgb(183, 203, 229) 48%, rgb(183, 203, 229) 63%,rgb(210, 213, 227) 63%, rgb(210, 213, 227) 83%,rgb(237, 222, 226) 83%, rgb(237, 222, 226) 100%);}
+
+html,
+body {
+    font-family: 'Open Sans', sans-serif;
+    height: 100%;
+    //   background-image: radial-gradient(circle at top right, rgb(49, 157, 235) 0%, rgb(49, 157, 235) 13%,rgb(76, 166, 234) 13%, rgb(76, 166, 234) 23%,rgb(103, 176, 232) 23%, rgb(103, 176, 232) 33%,rgb(130, 185, 231) 33%, rgb(130, 185, 231) 46%,rgb(156, 194, 230) 46%, rgb(156, 194, 230) 48%,rgb(183, 203, 229) 48%, rgb(183, 203, 229) 63%,rgb(210, 213, 227) 63%, rgb(210, 213, 227) 83%,rgb(237, 222, 226) 83%, rgb(237, 222, 226) 100%);
+    background: -moz-linear-gradient(45deg, #ba9dcf 0%, #553d67 100%);
+    background: -webkit-linear-gradient(45deg, #ba9dcf 0%, #553d67 100%);
+    background: linear-gradient(45deg, #ba9dcf 0%, #553d67 100%);
+}
+
 
 /* signup form */
+
+
 /* center css */
-.main{
-	display: table;
-	width: 100%;
-	height: 100%;
+
+.main {
+    display: table;
+    width: 100%;
+    height: 100%;
 }
 
-.container{
-	display: table-cell;
-	text-align: center;
-	vertical-align: middle
+.container {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle
 }
+
 
 /* signup */
-.signup{
-	background: #FFF;
-	max-width: 500px;
-	margin: 0 auto;
-	margin-top: 8px;
-	position: relative;
-	padding: 60px 0;
-	background-image: linear-gradient(-225deg, #63EEF0 0%, #3498DB 100%);
-	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.053), 0 10px 40px rgba(0, 0, 0, 0.1);
-	border-radius: 8px;
+
+.signup {
+    background: #FFF;
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 8px;
+    position: relative;
+    padding: 60px 0;
+    // background-image: linear-gradient(-225deg, #63EEF0 0%, #3498DB 100%);
+    background: -moz-linear-gradient(-225deg, #ba9dcf 0%, #553d67 100%);
+    background: -webkit-linear-gradient(-225deg, #ba9dcf 0%, #553d67 100%);
+    background: linear-gradient(-225deg, #ba9dcf 0%, #553d67 100%);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.053), 0 10px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
 }
 
-.signup:after{
-	content: " ";
-	display: table;
-	clear: both;
+.signup:after {
+    content: " ";
+    display: table;
+    clear: both;
 }
+
+
 /* from */
+
 .signup .form,
-.signup .features{
-	display: inline-block;
-	position: relative;
-	text-align: left;
+.signup .features {
+    display: inline-block;
+    position: relative;
+    text-align: left;
 }
 
-.signup .form{
-	width: 70%;
-	background: #fff;
-	left: -100px;
-	box-shadow: 0 15px 24px rgba(0, 0, 0, 0.22), 0 19px 76px rgba(0, 0, 0, 0.1);
-	padding: 40px 45px;
-	border-radius: 4px;
-	z-index: 2
+.signup .form {
+    width: 70%;
+    background: #fff;
+    left: -100px;
+    box-shadow: 0 15px 24px rgba(0, 0, 0, 0.22), 0 19px 76px rgba(0, 0, 0, 0.1);
+    padding: 40px 45px;
+    border-radius: 4px;
+    z-index: 2
 }
 
-.signup .features{
-	width: 30%;
-	left: -80px
+.signup .features {
+    width: 30%;
+    left: -80px
 }
 
 
 /* form */
-.signup h1{
-	font-size: 36px;
+
+.signup h1 {
+    font-size: 36px;
 }
 
-.signup p{
-	font-size: 16px;
-	color: #666;
-	font-weight: 300;
-	padding: 15px 0;
+.signup p {
+    font-size: 16px;
+    color: #666;
+    font-weight: 300;
+    padding: 15px 0;
 }
 
-.signup label{
-	display: block;
+.signup label {
+    display: block;
 }
 
-.signup form{
-	margin-top: 15px;
+.signup form {
+    margin-top: 15px;
 }
 
-.signup input{
-	width: 100%;
-	height: 45px;
-	padding: 0 35px;
-	border-radius: 2px;
-	margin-bottom: 10px;
-	border: 1.5px solid #d0d0d0;
-	font-family: 'Open Sans', sans-serif;
+.signup input {
+    width: 100%;
+    height: 45px;
+    padding: 0 35px;
+    border-radius: 2px;
+    margin-bottom: 10px;
+    border: 1.5px solid #d0d0d0;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.signup input.email{
-	background: url(https://res.cloudinary.com/fazurrehman/image/upload/v1485168692/dailyui/email.png) left 10px center no-repeat;
+.signup input.email {
+    background: url(https://res.cloudinary.com/fazurrehman/image/upload/v1485168692/dailyui/email.png) left 10px center no-repeat;
 }
 
-.signup input.password{
-	background: url(https://res.cloudinary.com/fazurrehman/image/upload/v1485168692/dailyui/password.png) left 5px center no-repeat;
+.signup input.password {
+    background: url(https://res.cloudinary.com/fazurrehman/image/upload/v1485168692/dailyui/password.png) left 5px center no-repeat;
 }
 
-
-.signup input[type=submit]{
-	text-transform: uppercase;
-	font-weight: 700;
-	border: 0;
-	margin-top: 15px;
-	background-image: linear-gradient(-255deg, #63C9F0 0%, #3DA2DF 80%, #3498DB 100%);
-	box-shadow: 0 10px 20px rgba(99, 201, 240, 0.1), 0 14px 56px rgba(99, 201, 240, 0.024);
-	color: #fff;
-
+.signup input[type=submit] {
+    text-transform: uppercase;
+    font-weight: 700;
+    border: 0;
+    margin-top: 15px;
+    // background-image: linear-gradient(-255deg, #63C9F0 0%, #3DA2DF 80%, #3498DB 100%);
+    background: -moz-linear-gradient(-225deg, #ba9dcf 0%, #553d67 100%);
+    background: -webkit-linear-gradient(-225deg, #ba9dcf 0%, #553d67 100%);
+    background: linear-gradient(-225deg, #ba9dcf 0%, #553d67 100%);
+    box-shadow: 0 10px 20px rgba(99, 201, 240, 0.1), 0 14px 56px rgba(99, 201, 240, 0.024);
+    color: #fff;
 }
+
 
 /* features */
-.features{
-	padding-top: 15px;
+
+.features {
+    padding-top: 15px;
 }
 
-.features h3{
-	font-size: 28px;
-	color: #fff;
-	font-weight: 600
+.features h3 {
+    font-size: 28px;
+    color: #fff;
+    font-weight: 600
 }
 
-.features li{
-	font-weight: 100;
-	font-size: 16px;
-	color: #fff;
-	padding-bottom: 15px;
-	background: url(https://res.cloudinary.com/fazurrehman/image/upload/v1485170272/dailyui/check.png) left top no-repeat;
-	padding-left: 30px;
-	margin-bottom: 5px;
+.features li {
+    font-weight: 100;
+    font-size: 16px;
+    color: #fff;
+    padding-bottom: 15px;
+    background: url(https://res.cloudinary.com/fazurrehman/image/upload/v1485170272/dailyui/check.png) left top no-repeat;
+    padding-left: 30px;
+    margin-bottom: 5px;
 }
 
 
 /* plan */
-.plan{
-	position: absolute;
-	bottom: 0;
-	right: -130px;
-	z-index: 1
+
+.plan {
+    position: absolute;
+    bottom: 0;
+    right: -130px;
+    z-index: 1
 }
-
-
-
-
-
-
