--- a/src/app/modules/home/map/map.component.scss
+++ b/src/app/modules/home/map/map.component.scss
@@ -21,6 +21,7 @@
 
 .map-detail{
   font-family: 'Bebas Neue', cursive;
+  padding: 20px 70px;
     text-align: center;
     position: relative;
     top: 50%;
