--- a/src/app/modules/tourists/components/guides-list/guides-list.component.scss
+++ b/src/app/modules/tourists/components/guides-list/guides-list.component.scss
@@ -70,3 +70,10 @@
     content: "\f005";
     color: black;
 }
+.name{
+    cursor: pointer; 
+    color: #22c1c3;
+}
+.name:hover{
+    color: #553d67;
+}
