--- a/src/app/shared/components/deals-cards/deals-cards.component.html
+++ b/src/app/shared/components/deals-cards/deals-cards.component.html
@@ -41,6 +41,7 @@
 
 <div *ngIf="!dealsList" class="row">
     <div class="col text-center">
+        <img class="image-fluid h-25 m-auto " src="../../../../assets/images/lime-396.png" alt="">
         <h1>No Deals available here!</h1>
     </div>
 </div>
