--- a/src/app/shared/components/guide-profile/guide-profile.component.scss
+++ b/src/app/shared/components/guide-profile/guide-profile.component.scss
@@ -5,7 +5,7 @@
 }
 
 .bgclass {
-    background-image: linear-gradient(to right, #22c1c3, #fdbb2d);
+  background: linear-gradient(-225deg, #ba9dcf 0%, #553d67 100%);
 }
 
 // .guide-contain {
