--- a/src/app/modules/admin/pages/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.scss
@@ -21,5 +21,5 @@ table.table th, table.table td {
   padding-bottom: 0.5rem;
 }
 .card h5{
-  background: linear-gradient(90deg, rgba(85,61,103,1) 0%, rgba(117,117,117,1) 100%) !important;
+  background: linear-gradient(-225deg, #ba9dcf 0%, #553d67 100%) !important;
 }
