--- a/src/app/modules/guide/components/deals/deals.component.html
+++ b/src/app/modules/guide/components/deals/deals.component.html
@@ -2,8 +2,7 @@
     <div class="mb-3 dealtop">
         <div class="row mx-0 px-0">
             <div class="col-12 col-md-6 px-0">
-
-                <div class="create-font mx-5 mb-2 text-center">Create your deals</div>
+              <div class="create-font mx-5 mb-2 text-center">Create your deals</div>
                 <div class="mx-5 text-center">Let Voila help you make your own tour package/deal according to your preferences</div>
 
                 <div class="text-center my-4">
@@ -20,6 +19,7 @@
         <app-deals-cards [dealsList]="DealsList" [role]="'guide'"></app-deals-cards>
     </div>
     <div *ngIf="DealsList.length <= 0 && isData">
+        <img class="image-fluid w-17 h-75 float-center m-auto " src="https://drive.google.com/file/d/1Wn0LLyy08Yu8WKvu2ScbUk1LeofvJ9qz/view?usp=sharing" alt="">
         <h4 class="text-center">No Deals Yet</h4>
     </div>
 </div>
