--- a/src/app/modules/tourists/components/guides-list/guides-list.component.html
+++ b/src/app/modules/tourists/components/guides-list/guides-list.component.html
@@ -8,7 +8,7 @@
                             class="" width="100%" height="100%" alt="...">
                     </div>
                     <div class="col-md-4 col-lg-5">
-                        <mdb-card-title style="font-size: 20px;">
+                        <mdb-card-title class="name" style="font-size: 20px;">
                             <strong [routerLink]="['/tourists/touristshome/guideProfile', guide._id]">
                                 {{guide.gender}} {{guide.name}}</strong>
                         </mdb-card-title>
@@ -141,6 +141,7 @@
                             </div>
                         </div>
                         <div *ngIf="!getDealsList(guide)" class="row p-2 text-center">
+                            <img class="image-fluid w-17 h-75 float-center m-auto " src="https://drive.google.com/file/d/1Wn0LLyy08Yu8WKvu2ScbUk1LeofvJ9qz/view?usp=sharing" alt="">
                             <h2>No Deals Avialable</h2>
                         </div>
                     </div>
@@ -152,6 +153,7 @@
 
 <div *ngIf="!searchService.guidesList"  class="row">
     <div class="col text-center">
+        <img class="image-fluid w-25 h-75 m-auto " src="../../../../../assets/images/flamenco-page-not-found-1.png" alt="">
         <h1>No Guides Available here!</h1>
     </div>
 </div>
