--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,7 +107,7 @@ body {
         transform: rotate(0);
     }
     55% {
-        background-color: #F37272;
+        background-color: #9b83ac;
     }
     100% {
         transform: rotate(90deg);
@@ -120,7 +120,7 @@ body {
         transform: rotate(0);
     }
     55% {
-        background-color: #F37272;
+        background-color: #9b83ac;
     }
     100% {
         transform: rotate(-90deg);
@@ -142,7 +142,7 @@ body {
         display: block;
         width: 40px;
         height: 40px;
-        background-color: #EE4040;
+        background-color: #553d67;
         animation: loaderBlock 1.2s infinite ease-in-out both;
         &:nth-child(1) {
             top: 0;
@@ -185,7 +185,7 @@ body {
         transform: rotate(0);
     }
     55% {
-        background-color: #F37272;
+        background-color: #9b83ac;
     }
     100% {
         transform: rotate(90deg);
@@ -198,7 +198,7 @@ body {
         transform: rotate(0);
     }
     55% {
-        background-color: #F37272;
+        background-color: #9b83ac;
     }
     100% {
         transform: rotate(-90deg);
@@ -220,7 +220,7 @@ body {
         z-index: 100;
         width: 40px;
         height: 40px;
-        background-color: #EE4040;
+        background-color: #553d67;
         animation: loaderBlock 1.2s infinite ease-in-out both;
         &:nth-child(1) {
             top: 0;
